--- a/DoAn/DoAn.csproj
+++ b/DoAn/DoAn.csproj
@@ -74,6 +74,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaiKhoan.cs" />
+    <Compile Include="ThongTinGiangVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ThongTinGiangVien.Designer.cs">
+      <DependentUpon>ThongTinGiangVien.cs</DependentUpon>
+    </Compile>
     <Compile Include="ThongTinSinhVien.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,6 +107,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ThongTinGiangVien.resx">
+      <DependentUpon>ThongTinGiangVien.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ThongTinSinhVien.resx">
+      <DependentUpon>ThongTinSinhVien.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
