--- a/DoAn/DoAn.csproj
+++ b/DoAn/DoAn.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DoAn</RootNamespace>
     <AssemblyName>DoAn</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -33,8 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,11 +52,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DBConnect.cs" />
+    <Compile Include="DoiMatKhauSinhVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DoiMatKhauSinhVien.Designer.cs">
+      <DependentUpon>DoiMatKhauSinhVien.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_DangNhap.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frm_DangNhap.Designer.cs">
       <DependentUpon>frm_DangNhap.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frm_DoiMatKhauGiangVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_DoiMatKhauGiangVien.Designer.cs">
+      <DependentUpon>frm_DoiMatKhauGiangVien.cs</DependentUpon>
     </Compile>
     <Compile Include="frm_GiangVien.cs">
       <SubType>Form</SubType>
@@ -64,15 +82,32 @@
     <Compile Include="frm_GV_DiemDanh.Designer.cs">
       <DependentUpon>frm_GV_DiemDanh.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm_RpGiangVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm_RpGiangVien.Designer.cs">
+      <DependentUpon>frm_RpGiangVien.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm_SinhVien.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frm_SinhVien.Designer.cs">
       <DependentUpon>frm_SinhVien.cs</DependentUpon>
     </Compile>
+    <Compile Include="GiangVienBaoCao.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GiangVienBaoCao.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Modify.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="TaiKhoan.cs" />
     <Compile Include="ThongTinGiangVien.cs">
       <SubType>Form</SubType>
@@ -86,8 +121,14 @@
     <Compile Include="ThongTinSinhVien.Designer.cs">
       <DependentUpon>ThongTinSinhVien.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="DoiMatKhauSinhVien.resx">
+      <DependentUpon>DoiMatKhauSinhVien.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm_DangNhap.resx">
       <DependentUpon>frm_DangNhap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm_DoiMatKhauGiangVien.resx">
+      <DependentUpon>frm_DoiMatKhauGiangVien.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frm_GiangVien.resx">
       <DependentUpon>frm_GiangVien.cs</DependentUpon>
@@ -95,18 +136,21 @@
     <EmbeddedResource Include="frm_GV_DiemDanh.resx">
       <DependentUpon>frm_GV_DiemDanh.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frm_RpGiangVien.resx">
+      <DependentUpon>frm_RpGiangVien.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm_SinhVien.resx">
       <DependentUpon>frm_SinhVien.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GiangVienBaoCao.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>GiangVienBaoCao.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <EmbeddedResource Include="ThongTinGiangVien.resx">
       <DependentUpon>ThongTinGiangVien.cs</DependentUpon>
     </EmbeddedResource>
@@ -125,6 +169,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
